--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,11 @@
     <%= f.text_field :bio, class: 'form-control' %>
   </div>
 
+  <div class="field form-group">
+    <strong>Upload a Profile Pic:</strong><br>
+    <%= f.file_field :avatar %>
+  </div>
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
