--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -10,5 +10,8 @@
   <%= @tweet.user_id %>
 </p>
 
+<%= render 'shared/likes' %>
+<br>
+
 <%= link_to 'Edit', edit_tweet_path(@tweet) %> |
 <%= link_to 'Back', tweets_path %>
